kompose/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql:latest
        imagePullPolicy: ""
        name: userdb
        ports:
        - containerPort: 3306
        resources: {}
        securityContext:
          capabilities:
            add:
            - SYS_NICE
        tty: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
