kompose/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: gateway
    spec:
      containers:
      - image: s631egn/gateway
        imagePullPolicy: ""
        name: gateway
        ports:
        - containerPort: 8090
        resources: {}
      hostname: gateway
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
