kompose/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: grafana
    spec:
      containers:
      - image: grafana/grafana
        imagePullPolicy: ""
        name: grafana
        ports:
        - containerPort: 3001
        resources: {}
      hostname: grafana
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
