kompose/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
      - args:
        - --config.file=/config/prometheus.yml
        image: prom/prometheus
        imagePullPolicy: ""
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
      hostname: prometheus
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
