kompose/rabbitconsumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitconsumer
  name: rabbitconsumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitconsumer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: rabbitconsumer
    spec:
      containers:
      - image: s631egn/rabbitconsumer
        imagePullPolicy: ""
        name: rabbitconsumer
        ports:
        - containerPort: 9797
        resources: {}
      hostname: rabbitconsumer
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
