kompose/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbitmq
        ports:
        - containerPort: 5672
        - containerPort: 15672
        resources: {}
      hostname: rabbitmq
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
