kompose/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: registry
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: registry
    spec:
      containers:
      - image: s631egn/registry
        imagePullPolicy: ""
        name: registry
        ports:
        - containerPort: 8083
        resources: {}
      hostname: registry
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
