kompose/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: userservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: userservice
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_URL
          value: jdbc:mysql://database:3306/userdb?autoReconnect=true&useSSL=false
        image: s631egn/userservice
        imagePullPolicy: ""
        name: userservice
        ports:
        - containerPort: 8089
        resources: {}
      hostname: userservice
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
