kompose/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: website
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: website
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: website
    spec:
      containers:
      - env:
        - name: GET_HOSTS_FROM
          value: dns
        image: s631egn/dashboard:latest
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 3000
        resources: {}
        tty: true
      hostname: website
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
