kompose/gasservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gasservice
  name: gasservice
spec:
  ports:
  - name: "8091"
    port: 8091
    targetPort: 8091
  selector:
    io.kompose.service: gasservice
status:
  loadBalancer: {}
