kompose/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: gateway
  type: NodePort
status:
  loadBalancer: {}
