kompose/rabbitconsumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitconsumer
  name: rabbitconsumer
spec:
  ports:
  - name: "9797"
    port: 9797
    targetPort: 9797
  selector:
    io.kompose.service: rabbitconsumer
status:
  loadBalancer: {}
