kompose/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  ports:
  - name: "8089"
    port: 8089
    targetPort: 8089
  selector:
    io.kompose.service: userservice
  type: NodePort
status:
  loadBalancer: {}
