kompose/windservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: windservice
  name: windservice
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  selector:
    io.kompose.service: windservice
status:
  loadBalancer: {}
